[tool.poetry]
name = "asyncio-pipe"
version = "0.0.1"
description = "Non-blocking IPC with Asyncio"
authors = ["Roger Iyengar <ri@rogeriyengar.com>", "Félix Voituret <fvoituret@deezer.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
